<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/main_activity.number_field_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:textAlignment="textEnd"
        android:paddingHorizontal="10dp"
        android:textSize="50sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/main_activity.reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/reset_button_background"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_margin="10dp"
            android:text="@string/main_activity__reset_btn__text"/>
        <!--<RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/main_activity.ss2_rb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_activity__ss2_rb__text"/>
            <RadioButton
                android:id="@+id/main_activity.ss8_rb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_activity__ss8_rb__text"/>
            <RadioButton
                android:id="@+id/main_activity.ss10_rb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/main_activity__ss10_rb__text"/>
            <RadioButton
                android:id="@+id/main_activity.ss16_rb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_activity__ss16_rb__text"/>
        </RadioGroup>-->
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/main_activity.plus_operation_btn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/main_activity__plus_operation_btn__text"/>
            <Button
                android:id="@+id/main_activity.minus_operation_btn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/main_activity__minus_operation_btn__text"/>
            <Button
                android:id="@+id/main_activity.mult_operation_btn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/main_activity__mult_operation_btn__text"/>
            <Button
                android:id="@+id/main_activity.div_operation_btn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/main_activity__div_operation_btn__text"/>
        </LinearLayout>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:columnCount="3"
            android:useDefaultMargins="true"
            android:orientation="horizontal">
            <Button
                android:id="@+id/main_activity.digit7_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:text="@string/main_activity__digit7_btn__text"/>
            <Button
                android:id="@+id/main_activity.digit8_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:text="@string/main_activity__digit8_btn__text"/>
            <Button
                android:id="@+id/main_activity.digit9_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:text="@string/main_activity__digit9_btn__text"/>

            <Button
                android:id="@+id/main_activity.digit4_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:text="@string/main_activity__digit4_btn__text"/>
            <Button
                android:id="@+id/main_activity.digit5_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:text="@string/main_activity__digit5_btn__text"/>
            <Button
                android:id="@+id/main_activity.digit6_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:text="@string/main_activity__digit6_btn__text"/>

            <Button
                android:id="@+id/main_activity.digit1_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:text="@string/main_activity__digit1_btn__text"/>
            <Button
                android:id="@+id/main_activity.digit2_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:text="@string/main_activity__digit2_btn__text"/>
            <Button
                android:id="@+id/main_activity.digit3_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:text="@string/main_activity__digit3_btn__text"/>

            <Button
                android:id="@+id/main_activity.digit0_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:textSize="30sp"
                android:text="@string/main_activity__digit0_btn__text"/>
            <Button
                android:id="@+id/main_activity.dot_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:text="@string/main_activity__point_btn__text"/>
        </GridLayout>
    </LinearLayout>

    <Button
        android:id="@+id/main_activity.compute_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:text="@string/main_activity__compute_btn__text"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>